--- a/style.css
+++ b/style.css
@@ -44,3 +44,28 @@ button{
     position: absolute;
     left: 114px;
 }
+
+
+
+.content{
+    position: absolute;
+    left: 140px;
+    top: 30px;
+}
+
+.content h1{
+    padding-bottom:1rem;
+    font-size: 2rem;
+}
+
+.content p{
+    font-size: 1rem;
+}
+
+.content #newspaper{
+    padding-top: 1rem;
+    font-size: 11px;
+    column-count: 3;
+    column-rule-color: aquamarine;
+    column-rule-style:groove;
+}
